@@ -38,7 +38,7 @@ DOS2UNIX = dos2unix
 dos2unix:
 	@$(DOS2UNIX) $(SRCS) $(INCLS)
 
-COMPILERFLAGS = -Wall -ffast-math -std=c99 -static
+COMPILERFLAGS = -Wall -ffast-math -std=c99
 
 USERLIBS = -lm
 INCLUDES = -I.. -I. -I../libopenjpeg
@@ -64,6 +64,9 @@ USERLIBS += @lcms1libs@
 endif
 
 bin_PROGRAMS = JPWL_j2k_to_image JPWL_image_to_j2k
+
+JPWL_j2k_to_image_CFLAGS = $(COMPILERFLAGS) $(INCLUDES) -DUSE_JPWL -static
+JPWL_image_to_j2k_CFLAGS = $(COMPILERFLAGS) $(INCLUDES) -DUSE_JPWL -static
 
 CFLAGS = $(COMPILERFLAGS) $(INCLUDES) -DUSE_JPWL
 LDADD = ./libopenjpeg_JPWL.la $(USERLIBS)
